# whisper-meeting-notes

./: .gitignore  .remote-http-endpoint  AGENTS.md  README.md  SETUP-COMPLETE.md  SYSTEM-SPECS.md  apply-configs.sh  combined_typechecker_and_linter_problems.txt  debug_ws.sh  install-prereqs.sh  pyproject.toml  setup.sh  sync-from-nixos.sh  sync-to-repo.sh
.github/workflows/: cli-help.yml
android/recording-transcription/: README.md  settings.gradle.kts
android/recording-transcription/app/: build.gradle.kts  proguard-rules.pro
configs/: youtube-music-flags.conf
configs/applications/: Zoom.desktop  chromium.desktop  firefox.desktop  ytermusic.desktop
configs/bash/: bashrc  bashrc.local
configs/btop/: btop.conf
configs/cargo/: config.toml
configs/claude/: settings.local.json
configs/claude/docs/: advancedtools.md  agents.md  skills.md
configs/claude/hooks/: skill-forced-eval-hook.sh
configs/codex/: config.toml
configs/git/: config
configs/greetd/: regreet.css
configs/hypr/: hyprland.conf  hyprlock.conf
configs/kanshi/: config
configs/kitty/: kitty.conf
configs/mako/: config
configs/nvim/: init.lua  lazy-lock.json
configs/opencode/: opencode.json
configs/scripts/: auto-power-profile.sh  backup.sh  bluetooth-autoconnect.sh  cache-cleanup.sh  chromium-safe.sh  clamshell-mode.sh  clear-notifications.sh  firefox-safe.sh  fix-chromium-window.sh  keybindings-popup.sh  max-fullscreen.sh  meeting-notes.sh  monitor-connect.sh  open-calendar.sh  power-menu.sh  reload.sh  system-health.sh  system-stats-waybar.sh  usb-menu.sh  usb-monitor.sh  volume-control.sh  vscode-theme-dark.sh  vscode-theme-light.sh  vscode-theme-switch.sh  wallpaper-cycle.sh  weather-waybar.sh  welcome.sh  wifi-menu.sh  workspace-annotations.sh  workspace-notes.sh  workspace-overview.sh  workspace-rename.sh  wsu-maint.sh  zoom-workplace.sh  zoom-x11.sh
configs/starship/: starship.toml
configs/waybar/: config.jsonc  style.css
configs/wofi/: config  power-menu.css  style.css
configs/xdg-desktop-portal/: portals.conf
configs/yazi/: keymap.toml  open.toml  theme.toml  yazi.toml
docs/: advanced.md  code-oss_setup.md  dori-notebooks.md  dori-tools.md  keybindings.md  neovim-ide.md  neovim.md  notebooks-cloudflare.md  servers.md  terminal-tools.md  troubleshooting.md  ubuntu-packages.md  ytermusic.md
machines/wsa/: README.md
notebooks/: .gitignore  cloudflared-config.example.yml  pixi.toml
notebooks/reports/: README.md  example.ipynb
notebooks/scripts/: run_lab.sh  run_tunnel.sh  run_voila.sh  run_voila_single.sh
remote-results/: 20251014-094624-sample-voice.md  20251014-095601-pyannote-sample.md  20251014-100540-pyannote-sample.md  20251101-104328-session-20250924-133616.md  20251101-104423-test_long.md  20251101-105403-test_long.md  20251101-110441-test_long.md
scripts/: ffmpeg-wrapper.sh  meeting-notes.ps1  meeting-notes.sh  package-snapshot.sh  record-and-upload.sh  record-audio.sh  setup-drop-service.sh  sync-nvim-to-repo.sh
scripts/ci/: check_cli_help.py
scripts/setup/: configure-regreet.sh  configure-sleep.sh  configure-system-performance.sh  configure-usb-automount.sh  install-neovim-kickstart.sh  setup-tailscale.sh  usb-automount-handler.sh
src/meeting_notes/: drop_server.py  drop_service.py  main.py
wallpapers/: README.md
(+137 files in other folders)
