[project]
name = "meeting-notes-kit"
version = "0.1.0"
description = "High-fidelity meeting transcription with WhisperX diarisation."
readme = "README.md"
requires-python = ">=3.11,<3.13"

[tool.uv]
package = true
default-groups = ["base"]

[dependency-groups]
base = [
    "whisperx>=3.1",
    "pyannote.audio>=3.2",
    "rich>=13.9",
    "tabulate>=0.9",
]


[project.scripts]
meeting-notes = "meeting_notes.main:main"
